--- a/frontend/dev/index.html
+++ b/frontend/dev/index.html
@@ -1,20 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Captain Admin</title>
 </head>
-<body>
-
+<body class="dark:bg-gray-900">
     <div class="max-w-5xl mx-auto p-6">
-      <h1 class="text-2xl font-bold mb-4 text-gray-900">Posts</h1>
+      <h1 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">Posts</h1>
       <div x-inity="posts"></div>
     </div>
     <hr>
 
     <div class="max-w-5xl mx-auto p-6">
-      <h1 class="text-2xl font-bold mb-4 text-gray-900">Pages</h1>
+      <h1 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">Pages</h1>
       <div x-inity="pages"></div>
     </div>
     <hr>
