--- a/frontend/dev/index.html
+++ b/frontend/dev/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Captain Admin</title>
-</head>
-<body class="dark:bg-gray-900">
+<html lang="en">
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Captain Admin</title>
+  </head>
+  <body class="dark:bg-gray-900">
+    <!-- Content Area -->
+    <div class="max-w-5xl mx-auto p-6">
+      <h1 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">Settings</h1>
+      <div x-inity="settings">
+        {"codeThemeOptions": [
+          {"name": "Solarized Light", "value": "solarized-light"},
+          {"name": "Solarized Dark", "value":"solarized-dark"},
+          {"name": "Github", "value":"github"},
+          {"name": "TTCN", "value":"ttcn"},
+          {"name": "Monokai", "value":"monokai"}
+        ]}
+      </div>
+    </div>
+    <hr>
+
     <div class="max-w-5xl mx-auto p-6">
       <h1 class="text-2xl font-bold mb-4 text-gray-900 dark:text-white">Posts</h1>
-      <div x-inity="posts"></div>
+      <div x-inity="posts">
+        {"title": "My First Post"}
+      </div>
     </div>
     <hr>
 
@@ -17,6 +34,6 @@
       <div x-inity="pages"></div>
     </div>
     <hr>
-  <script type="module" src="./dev.ts"></script>
+    <script type="module" src="./dev.ts"></script>
   </body>
 </html>
