--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Captain Admin</title>
+    <link rel="stylesheet" href="./src/app.css">
 
+</head>
+<body>
+  <!-- Content Area -->
+    <main class="rounded-xl bg-white mr-8">
     <div class="max-w-5xl mx-auto p-6">
       <h1 class="text-2xl font-bold mb-4 text-gray-900">Posts</h1>
       <div x-inity="posts"></div>
@@ -14,12 +17,11 @@
     <hr>
 
     <div class="max-w-5xl mx-auto p-6">
-      <h1 class="text-2xl font-bold mb-4 text-gray-900">Posts</h1>
+      <h1 class="text-2xl font-bold mb-4 text-gray-900">Pages</h1>
       <div x-inity="pages"></div>
     </div>
     <hr>
-
-
+  </main>
   <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
